--- a/BDCourse_2021_Stack-Processing_corrections.ipynb
+++ b/BDCourse_2021_Stack-Processing_corrections.ipynb
@@ -221,6 +221,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Proposed solution\n",
+    "\n",
+    "# Extract first and last image of the stack\n",
+    "first_image = stack[0,...] # index 0 return to the first element of the array\n",
+    "last_image = stack[-1,...] # index -1 return to the last element of the array\n",
+    "\n",
+    "# Display first_image and last_images side by side (use figsize=(22,22))\n",
+    "f, axes = plt.subplots(1, 2, figsize=(22, 22))\n",
+    "axes[0].imshow(first_image, cmap='gray') # display first_image\n",
+    "axes[1].imshow(last_image, cmap='gray') # display last_image \n",
+    "axes[0].title.set_text('first image') # add title (first_image)\n",
+    "axes[1].title.set_text('last image') # add title (last_image_image)\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -279,6 +300,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Proposed solution\n",
+    "\n",
+    "nY_rsize = stack_rsize.shape[1] # get Stack size in y\n",
+    "nX_rsize = stack_rsize.shape[2] # get Stack size in x\n",
+    "print(nY_rsize, nX_rsize)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -292,6 +326,27 @@
    "outputs": [],
    "source": [
     "# Find a solution, see 3.3 and Exercice 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Proposed solution\n",
+    "\n",
+    "# Extract cropped region of stack and stack_rsize\n",
+    "stack_crop = stack[0,200:300,400:500].copy() # get stack from: y 200 to 300 and x 400 to 500 \n",
+    "stack_rsize_crop = stack_rsize[0,100:150,200:250].copy() # get stack_rsize from: y 100 to 150 and x 200 to 250 (same as stack but multiplied by RSIZE_FACTOR) \n",
+    "\n",
+    "# Display stack_crop and stack_rsize_crop side by side (use figsize=(22,22))\n",
+    "f, axes = plt.subplots(1, 2, figsize=(22, 22))\n",
+    "axes[0].imshow(stack_crop, cmap='gray')\n",
+    "axes[1].imshow(stack_rsize_crop, cmap='gray') \n",
+    "axes[0].title.set_text('stack')\n",
+    "axes[1].title.set_text('stack_rsize')\n",
+    "plt.show()"
    ]
   },
   {
@@ -317,6 +372,19 @@
    "outputs": [],
    "source": [
     "# Find a solution, see 1.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Proposed solution\n",
+    "\n",
+    "# Here we combine ROOT_PATH and STACK_NAME minus the 4 last character ('.tif') that we combine with a string '_rsize.tif' \n",
+    "stack_path_rsize = (ROOT_PATH+STACK_NAME[0:-4]+'_rsize.tif')\n",
+    "print(stack_path_rsize)"
    ]
   },
   {
@@ -431,6 +499,40 @@
    "outputs": [],
    "source": [
     "# Find a solution, see 1.3, 1.4, 2.3, 4.2, Exercice 4, 5.1 and 5.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Proposed solution\n",
+    "\n",
+    "for stack_name in dir_list_filtered:\n",
+    "    \n",
+    "    # Get \"opening\" path\n",
+    "    stack_path = (ROOT_PATH+stack_name)\n",
+    "    \n",
+    "    # Open stack\n",
+    "    stack = io.imread(stack_path)\n",
+    "    \n",
+    "    # Get dimension sizes\n",
+    "    nT = stack.shape[0]\n",
+    "    nY = stack.shape[1]\n",
+    "    nX = stack.shape[2]\n",
+    "    \n",
+    "    # Resize stack\n",
+    "    stack_rsize = resize(stack,(nT//1, nY//RSIZE_FACTOR, nX//RSIZE_FACTOR), preserve_range=True, anti_aliasing=True)     \n",
+    "    \n",
+    "    # Get \"saving\" path\n",
+    "    stack_path_rsize = (ROOT_PATH+stack_name[0:-4]+'_rsize.tif')\n",
+    "    \n",
+    "    # Convert to uint16\n",
+    "    stack_rsize = stack_rsize.astype('uint16')\n",
+    "    \n",
+    "    # Save stack_rsize\n",
+    "    io.imsave(stack_path_rsize, stack_rsize, check_contrast=False)"
    ]
   }
  ],
