--- a/BDCourse_2021_Stack-Processing.ipynb
+++ b/BDCourse_2021_Stack-Processing.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Basic image stack processing (with corrections)"
+    "# Basic image stack processing"
    ]
   },
   {
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **1.2** - Define a path toward `Ctrl_Endocad-GFP(6-12-13)_23_StackCrop.tif` located in the `BD_EpiCellSeg/DataSet` shared folder : "
+    "- **1.2** - Define a path toward `ctrl_40x_Endocad-GFP(6-12-13)_23.tif` located in the `BDCourse_2021_Image-Stack-Processing/data` shared folder : "
    ]
   },
   {
@@ -47,8 +47,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ROOT_PATH = 'C:/Datas/3-GitHub_BDehapiot/BDCourse_2021_Stack-Processing/data/' # modify your path according to where is located the shared folder on your computer\n",
-    "STACK_NAME = '13-12-06_Ctrl_40x_Endocad-GFP_23.tif'"
+    "ROOT_PATH = 'C:/Datas/3-GitHub_BDehapiot/BDCourse_2021_Image-Stack-Processing/data/' # modify your path according to where is located the shared folder on your computer\n",
+    "STACK_NAME = 'ctrl_40x_Endocad-GFP(6-12-13)_23.tif'"
    ]
   },
   {
@@ -307,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:red\"> **- Exercice 4: Define a path to save** `stack_rsize` **as** `Ctrl_Endocad-GFP(6-12-13)_23_StackCrop_rsize.tif` **in the** `BD_EpiCellSeg/DataSet` **shared folder :**"
+    "<span style=\"color:red\"> **- Exercice 4: Define a path to save** `stack_rsize` **as** `Ctrl_Endocad-GFP(6-12-13)_23_StackCrop_rsize.tif` **in the** `BDCourse_2021_Image-Stack-Processing/data` **shared folder :**"
    ]
   },
   {
@@ -357,7 +357,7 @@
    "source": [
     "---\n",
     "## 6) Batch processing\n",
-    "Here, we will resize all stacks present in the `BD_EpiCellSeg/DataSet` shared folder at once"
+    "Here, we will resize all stacks present in the `BDCourse_2021_Image-Stack-Processing/data` shared folder at once"
    ]
   },
   {
@@ -421,7 +421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:red\"> **- Exercice 5: Loop through** `dir_list_filtered` **and resize/save all stacks contained in** `BD_EpiCellSeg/DataSet` **shared folder :**"
+    "<span style=\"color:red\"> **- Exercice 5: Loop through** `dir_list_filtered` **and resize/save all stacks contained in** `BDCourse_2021_Image-Stack-Processing/data` **shared folder :**"
    ]
   },
   {
